# ceng596

./: .gitignore  .gitlog.tmp  README.md  app.py  pyproject.toml  requirements.txt
data/qrels/: qrels.trec
data/topics/: topics.trec
scripts/: step1_sanity_check.py  step2_bm25_baseline.py  step3_tune_bm25.py  step4_extended_boolean.py  step5_rocchio_prf.py  step6_wordnet_vs_prf.py  step7_word2vec.py  step8_tolerant_retrieval.py
src/ir596/: config.py  evaluate.py
src/ir596/app/: __init__.py
src/ir596/index/: build_index.py
src/ir596/io/: parse_corpus.py  parse_qrels.py  parse_topics.py
src/ir596/retrieval/: __init__.py  bm25.py  extended_boolean.py  prf.py  tolerant.py  topics.py  tune_bm25.py  word2vec.py  wordnet.py
