[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ir596"
version = "0.1.0"
description = "CENG 596 — Ad-Hoc IR on the Associated Press 1988 corpus"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "python-terrier>=1.0",
    "pandas>=2.0",
    "pytrec_eval-terrier>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
